fix:scrollbar-hidden

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,12 @@ body {
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
+  -ms-overflow-style: none; /* IE 및 Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+body::-webkit-scrollbar {
+  display: none; /* 크롬, 사파리, 엣지 */
 }
 
 img {
@@ -51,4 +57,8 @@ img {
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none;
 }
